syntax = "proto3";
package clients.contacts;
option go_package = "clients.contacts.v1;contacts";

import "google/protobuf/timestamp.proto";

service ContactService {
  rpc CreateContact(CreateRequest) returns (Contact);
  rpc GetContact(GetRequest) returns (Contact);
  rpc UpdateContact(UpdateRequest) returns (Contact);
  rpc DeleteContact(DeleteRequest) returns (DeleteResponse);
  rpc ListContacts(ListRequest) returns (ListResponse);
}

message Contact {
  string id = 1;
  string client_id = 2;
  string full_name = 3;
  optional string position = 4;
  optional string email = 5;
  optional string phone = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateRequest {
  string client_id = 1;
  string full_name = 2;
  optional string position = 3;
  optional string email = 4;
  optional string phone = 5;
}

message UpdateRequest {
  string id = 1;
  optional string full_name = 2;
  optional string position = 3;
  optional string email = 4;
  optional string phone = 5;
  optional bool is_active = 6;
}

message GetRequest {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
}

message ListRequest {
  int32 page = 1;
  int32 page_size = 2;
  string client_id = 3;
  optional string search = 4;
  optional bool active_only = 5;
}

message ListResponse {
  repeated Contact contacts = 1;
  int32 total_count = 2;
}